--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,17 @@ body {
 }
 
 .card {
-    width: 400px;
+    width: 475px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
     justify-content: space-around;
     text-align: center;
-    background: #ddebf8;
-    color: #2b2839;
-    border-bottom: 6px solid #d8cefe;
-        
+    background: #3F3F37;
+    color: #D6D6B1;
+    border-bottom: 6px solid #de541e;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;   
     /*
     Challenge:
     Find a color palette you like on Coolors.co
@@ -30,8 +31,8 @@ body {
      */
 }
 
-.border-blue {
-    border: 1px dotted blue;
+.border-orange {
+    border: 1px dotted #de541e;
 }
 
 /*
